# logcrypt

./: Cargo.toml  README.md
src/: cli.rs  ipcrypt_module.rs  main.rs  uricrypt_module.rs  utils.rs
src/log_parser/: detector.rs  mod.rs  parser.rs  patterns.rs
src/log_parser/formats/: apache.rs  bunnycdn.rs  generic.rs  json.rs  mod.rs
