[package]
name = "logcrypt"
version = "0.1.0"
edition = "2021"
authors = ["LogCrypt Contributors"]
description = "CLI tool for encrypting/decrypting IP addresses and URIs"
license = "MIT"

[dependencies]
ipcrypt-rs = "0.9.4"
uricrypt = "0.1.6"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
regex = "1.10"
lazy_static = "1.4"
