[package]
name = "logcrypt"
version = "0.1.0"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "CLI tool for encrypting private data in log files"
license = "MIT"

[dependencies]
ipcrypt-rs = "0.9.4"
uricrypt = "0.1.13"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
regex = "1.11"
lazy_static = "1.5"
